Update notes with corrections

--- a/27_01_2022_session.md
+++ b/27_01_2022_session.md
@@ -41,16 +41,15 @@
 ### Basic concepts within Godot
 - Think of your game as a tree .. of trees ..
 
-### Godot is considered 'object-oriented'
-- Composition
+### Godot is considered '[object-oriented](https://en.wikipedia.org/wiki/Object-oriented_programming)'
+- [Composition](https://en.wikipedia.org/wiki/Object_composition)
   - Things (objects, nodes) are composed of others
   - objects have child objects, which might have child objects... 'tree branches'
-- Aggregation
-  - Objects are collections of other objects
-  - Characterize an objects characteristics using other, likely simpler, objects
-- helpful [article](https://medium.com/swlh/aggregation-vs-composition-in-object-oriented-programming-3fa4fd471a9f) on the concept
+- Godot lets you aggregate objects to form others
+- You can reuse the objects all over
+  - but edit the 'basis' of that type of object, and you update all of them
 
-### Building blocks
+### Building blocks (objects)
 - how Godot deals with organization
 
 #### scenes
@@ -87,6 +86,7 @@
 ### Getting the project started
 - change the display resolution to a square
   - go to 'Project Settings' and click 'Search', enter 'window'
+  - Under the 'Display' section, select the 'Window' category
   - set Stretch mode and aspect to '2d' and 'keep'
     - this way, the ratio doesn't change for different displays
   - notice the update in the viewport
@@ -99,7 +99,7 @@
   - rather than 2D scene, pick 'Other Node' and select an 'Area2D' type of node
   - This will let our character collide
 - Using composition + aggregation, we can get more functions
-  - before we do this - make sure we don't accidentally selet child nodes (which we'll be adding)
+  - before we do this - make sure we don't accidentally select child nodes (which we'll be adding)
     - the icon next to the lock at the top
 
 #### Add an 'AnimatedSprite' node (_Graphics_)
