update session notes, add Godot project
include animation node, attribute sprites and include

--- a/27_01_2022_session.md
+++ b/27_01_2022_session.md
@@ -3,6 +3,7 @@
 - engine + editor concepts
 - creating a new project
 - adding a scene
+- creating a sprite
 
 ### Beginning game development
 - related to last weeks question - constraining your objective
@@ -98,9 +99,16 @@
     - notice a new editor tab opens
   - rather than 2D scene, pick 'Other Node' and select an 'Area2D' type of node
   - This will let our character collide
-- Using composition + aggregation, we can get more functions
+- Using composition, we can get more function from a simple node
   - before we do this - make sure we don't accidentally select child nodes (which we'll be adding)
     - the icon next to the lock at the top
+
+### Add frames for the animation
+- frames or images make up an animation
+  - the frames are sequenced to emulate movement
+- add frames for each one using the 'Animation Frames' tools
+  - might not be perfect but, can touch up later
+- Save
 
 #### Add an 'AnimatedSprite' node (_Graphics_)
 - once you've added the node, use the 'Inspector' on the right to view the properties
@@ -108,21 +116,19 @@
 - Find the 'Frames' property, select 'New SpriteFrames'
 - you should see an 'Animations' dock appear
 - Add a 'walk' and 'idle' animation (on the left-hand side)
-- Add a '.png' file for each
+- find some pngs (or make them) and add them to your project folder
+  - they'll show up in the FileSystem tab on the lefthand side
+- Associate a '.png' file with each animation
   - PNG files are typically used for frames
   - I found mine at itch.io from artist [Pixfinity](https://pixfinity.itch.io/scificharacter3)
-  - if ever you use art, attribute the source and follow any instructions indicated by the artist! Same goes for any asset
-- find some pngs (or make them) and add them to your project folder
-
-
-#### Add a 'CollisionShape2D' node (_Physics_)
-- Back in the inspector, choose the shape property
-  - pick one that best matches the edges of your sprite
-  - fit it to your sprite in the viewport
-- Save
+    - if ever you use art, attribute the source and follow any instructions indicated by the artist! Same goes for any asset
 
 ### Press the play button at the top right
 - you should now see a preview with your sprite
+  - I noticed my sprite was small relative to the playfield
+  - I changed this by modifying the Castway property 'Transform' under 'Node2D' in the inspector
+    - Set x, y 'Scale' to 2
+- Press the play button again to preview
 
 ### Next time
 - Moving the player
