quality of life changes

--- a/03_03_2022_session.md
+++ b/03_03_2022_session.md
@@ -5,7 +5,8 @@
 - If you download this project, you'll find that the associated 'art' assets are blurry
   - this is a result of the asset import defaults, where the Godot engine applies a filter
   - this filter isn't something we want for 2D pixelated assets, since this tries to blend adjacent pixels
-  - I disabled in 'Project Settings...' under 'Import Defaults'
+  - I disabled in 'Project Settings...' under 'Import Defaults' 
+  - Select 'Importer: Terxture' and find the 'Filter' flag under 'Flags' - disable it
 - Keep the _Castaway_'s back turned
   - when we animate the idle animation, we face the character sprite 'forward'
   - it's a bit more natural to maintain the orientation of the _Castaway_ after we move each time
