updated notes ahead of session

--- a/03_03_2022_session.md
+++ b/03_03_2022_session.md
@@ -125,7 +125,7 @@ func initialize() -> void:
 - For the _Obstacle_
   - in the Inspector on the right, set the 'Animation' property to 'default'
 - For the _SlimeObstacle_
-  - in the Inspector on the right, set the 'Animation' property to 'default'
+  - in the Inspector on the right, set the 'Animation' property to 'slime'
 - Play the _Planet\_0_ level, and you should see that the instances appear differently now
   - but the _SlimeObstacle_ is not animating yet
 
