--- a/31_03_2022_session.md
+++ b/31_03_2022_session.md
@@ -1,18 +1,149 @@
-### Videogame Development Pt. 6
+## Videogame Development Pt. 6
 - Movable obstacles (boxes)
 - Creating a puzzle
 
-#### Layers and masks
+### Layers and masks
 - Godot provides a collision layer system for managing how objects see one another
-  - and how they interpret whether a collision has occurred, and who was collided
+  - used to help interpret whether a collision has occurred, and who was collided
+  - Layers are used to differentiate scenes as unique colliders
+  - Masks are used to determine which layers to interact with
 - Now that we have multiple types of obstacles, the _Castaway_, and the level boundaries
 - We can name and assign layers for these different classes of objects
-  - a layer for _Obstacle_, _SlimeObstacle_, _MovableObstacle_, _Castaway_, and the 'TileMap' surrounding the player
-- Once the layers are in place, we need to mask each of the scenes for the corresponding collisions
+  - Go to 'Project > Project Settings...' 
+  - Find 'Layer Names > 2d Physics'
+  - assign layer names for 1 _Castaway_, 2 _Obstacle_, 3 _SlimeObstacle_, 4 _MovableObstacle_
+- Once the layers are in place, we need to mask each of the scenes for the collisions we expect
   - _Castaway_ collides with all layers
-  - _Obstacle_ and the 'TileMap' collides with the _Castaway_ and _MovableObstacle_
-  - _SlimeObstacle_ collides only with the _Castaway_
+  - _Obstacle_ scenes and the 'TileMap' collide with the _Castaway_ and _MovableObstacle_
+  - _SlimeObstacle_ collides with the _Castaway_ and the _MovableObstacle_
   - _MovableObstacle_ collides with all layers
+
+### Reminded of our objective
+- alone, we are stranded on a planet made of slime
+  - not everything is slime... but most things are
+  - we realize that if we touch anything made of slime, disappear - terrible
+- we have to stick to what is not slime
+- but we also have to escape a maze
+  - by moving blocks that are not slime
+
+### Movable obstacles (boxes)
+- This obstacle is again similar to our _Obstacle_ and _SlimeObstacle_
+  - so we'll reuse the base _Obstacle_ again by inheriting it
+- We also want a few different behaviors
+  - unlike the slime, when colliding with this object we want the _Castaway_ to push it
+  - it should also collide with other obstacles
+
+#### Implementing the inherited scene
+- Similarly to the _SlimeObstacle_, we'll create a 'New Inherited Scene...' using the top ribbon
+  - inherit from _Obstacle_
+  - rename the scene 'MovableObstacle'
+- In the 'Inspector' tab on the right-hand side
+  - open the 'Collision' property and set the 'Layer' property to 'MovableObstacle'
+  - set the 'Mask' property by enabling all layers 1-4
+- Add a child instance of _MovableObstacle_ to the _Planet\_0_
+  - should be a sibling of the other scenes
+- Add a script for this scene
+  - where we'll define behavior that differentiates it from the base _Obstacle_
+- Save the new scene
+
+#### Scripting the behavior of the moving box
+- Open the newly created _MovableObstacle_ script and add a `push` function
+  - what happens when the character pushes the box
+- Add the function anywhere you like, above or below the `_ready` function
+```
+func push(velocity : Vector2) -> void:
+	move_and_slide(velocity)
+```
+- Similiar to our implementation of the _Castaway_ movement
+  - using `move_and_slide` means our obstacle will acknowledge collisions during motion
+  - but, we still need to call this new function from somewhere
+
+##### colliding with _MovableObstacle_
+- Review the _Castaway_ script and recall the `_physics_process` function
+  - we're going to check for this particular collison from our _Castaway_
+  - like we did for the _SlimeObstacle_
+- first, isolate the collider (what the _Castaway_ collided with) as a variable
+  - we'll need to use it to push the obstacle from the _Castaway_ script
+```
+func _physics_process(delta : float) -> void:
+    ...
+	move_and_slide(velocity * speed)
+	for i in get_slide_count():
+		# get the collider as a separate variable, use it on the next line to get the layer
+		var collided_with : = get_slide_collision(i).collider
+		var collision_layer : int = collided_with.get_collision_layer()
+        ...
+```
+- referencing the collision layer for _MovableObstacle_
+  - check to see if we've collided
+  - do so after we check for slime collisions - avoid allowing illegal movement
+```
+...
+if collision_layer == 0b100:
+	hide()
+	$CollisionShape2D.set_deferred("disabled", true)
+	emit_signal("hit")
+
+# check the bit in the 4th position
+if collision_layer == 0b1000:
+    ...
+```
+##### pushing the _MoveableObstacle_
+- to push the box, we need to reference the obstacle we collided with
+  - this should be the _MoveableObstacle_ - we can do a [cast](https://en.wikipedia.org/wiki/Type_conversion) to ensure this
+```
+...
+if collision_layer == 0b1000:
+    # using half-speed for the player movement while pushing
+    # simulating a heavy box
+	collided_with.push(velocity * (speed / 2))
+```
+- If you've configured all your layers correctly, we should be calling the new `push` function
+  - otherwise, you'll see an error in the Debugger output
+- Save the script and test the scene
+
+##### resetting the _MoveableObstacle_
+- as we do when the _Castaway_ hits the slime
+- since this scene is also a child instance of _Planet\_0_
+- create a new function on the _MoveableObstacle_ script
+```
+func set_position(input_position : Vector2) -> void:
+	position = input_position
+```
+- next, within the _Planet\_0_ scene, create a new 'Position2D' node
+  - should be a child of _Planet\_0_
+  - this will be used to initialize the _MoveableObstacle_ position
+  - within the 2D view editor, align the new position node with the expected location of the _MoveableObstacle_
+-  call the new function from within the _Planet\_0_ script
+```
+func initialize() -> void:
+	$Castaway.initialize($StartPosition.position)
+	$MovableObstacle.set_position($MoveableObstaclePosition.position)
+```
+- Save, and test the level with the change
+  - see that the moveable obstacle resets position when the player resets
+
+#### Making a separate animation
+- Open up the base _Obstacle_ so we can add a new animation for the _MoveableObstacle_ to render
+- For the 'AnimatedSprite' node, add another animation, called 'moving'
+  - select and drag a texture you want to use that differs from the slime or the standard obstacle
+- Keep in mind: the _MovableObstacle_ inherits from _Obstacle_
+  - all animations will appear on the _MovableObstacle_
+  - but we can select which one we want rendered in the scene
+- Like we did for the _SlimeObstacle_
+  - in the Inspector on the right, set the 'Animation' property to 'moving'
+- Play the _Planet\_0_ level, and you should see that the instances appear differently now
+
+### Creating a puzzle
+- We're nearing a playable game
+  - With the components we have, we can start arranging a level
+- Try different arrangements of slime, moveable obstacles, obstacles, and player positions
+- Try changing the shape of the 'TileMap'
+- Some mechanical ideas
+  - Remember creating the 'Position2D' nodes for resetting after slime is touched?
+  - These could be moved or reset when the player makes certain moves
+    - could _not_ reset moveable obstacle positions
+    - could change player starting position after moving certain boxes
 
 ### Next time
 - Reaching an objective
