change obstacle name wording in notes, indents

--- a/31_03_2022_session.md
+++ b/31_03_2022_session.md
@@ -66,13 +66,13 @@ func push(velocity : Vector2) -> void:
   - we'll need to use it to push the obstacle from the _Castaway_ script
 ```
 func _physics_process(delta : float) -> void:
-    ...
+	...
 	move_and_slide(velocity * speed)
 	for i in get_slide_count():
 		# get the collider as a separate variable, use it on the next line to get the layer
 		var collided_with : = get_slide_collision(i).collider
 		var collision_layer : int = collided_with.get_collision_layer()
-        ...
+		...
 ```
 - referencing the collision layer for _MovableObstacle_
   - check to see if we've collided
@@ -88,43 +88,43 @@ if collision_layer == 0b100:
 if collision_layer == 0b1000:
     ...
 ```
-##### pushing the _MoveableObstacle_
+##### pushing the _MovableObstacle_
 - to push the box, we need to reference the obstacle we collided with
-  - this should be the _MoveableObstacle_ - we can do a [cast](https://en.wikipedia.org/wiki/Type_conversion) to ensure this
+  - this should be the _MovableObstacle_ - we can do a [cast](https://en.wikipedia.org/wiki/Type_conversion) to ensure this
 ```
 ...
 if collision_layer == 0b1000:
-    # using half-speed for the player movement while pushing
-    # simulating a heavy box
+	# using half-speed for the player movement while pushing
+	# simulating a heavy box
 	collided_with.push(velocity * (speed / 2))
 ```
 - If you've configured all your layers correctly, we should be calling the new `push` function
   - otherwise, you'll see an error in the Debugger output
 - Save the script and test the scene
 
-##### resetting the _MoveableObstacle_
+##### resetting the _MovableObstacle_
 - as we do when the _Castaway_ hits the slime
 - since this scene is also a child instance of _Planet\_0_
-- create a new function on the _MoveableObstacle_ script
+- create a new function on the _MovableObstacle_ script
 ```
 func set_position(input_position : Vector2) -> void:
 	position = input_position
 ```
 - next, within the _Planet\_0_ scene, create a new 'Position2D' node
   - should be a child of _Planet\_0_
-  - this will be used to initialize the _MoveableObstacle_ position
-  - within the 2D view editor, align the new position node with the expected location of the _MoveableObstacle_
+  - this will be used to initialize the _MovableObstacle_ position
+  - within the 2D view editor, align the new position node with the expected location of the _MovableObstacle_
 -  call the new function from within the _Planet\_0_ script
 ```
 func initialize() -> void:
 	$Castaway.initialize($StartPosition.position)
-	$MovableObstacle.set_position($MoveableObstaclePosition.position)
+	$MovableObstacle.set_position($MovableObstaclePosition.position)
 ```
 - Save, and test the level with the change
   - see that the moveable obstacle resets position when the player resets
 
 #### Making a separate animation
-- Open up the base _Obstacle_ so we can add a new animation for the _MoveableObstacle_ to render
+- Open up the base _Obstacle_ so we can add a new animation for the _MovableObstacle_ to render
 - For the 'AnimatedSprite' node, add another animation, called 'moving'
   - select and drag a texture you want to use that differs from the slime or the standard obstacle
 - Keep in mind: the _MovableObstacle_ inherits from _Obstacle_
