updating session notes, project files

--- a/31_03_2022_session.md
+++ b/31_03_2022_session.md
@@ -18,7 +18,7 @@
   - _SlimeObstacle_ collides with the _Castaway_ and the _MovableObstacle_
   - _MovableObstacle_ collides with all layers
 
-### Reminded of our objective
+### Review our objective
 - alone, we are stranded on a planet made of slime
   - not everything is slime... but most things are
   - we realize that if we touch anything made of slime, disappear - terrible
@@ -27,8 +27,8 @@
   - by moving blocks that are not slime
 
 ### Movable obstacles (boxes)
-- This obstacle is again similar to our _Obstacle_ and _SlimeObstacle_
-  - so we'll reuse the base _Obstacle_ again by inheriting it
+- This obstacle is similar to our _Obstacle_ and _SlimeObstacle_
+  - so we'll reuse the base _Obstacle_ by inheriting it
 - We also want a few different behaviors
   - unlike the slime, when colliding with this object we want the _Castaway_ to push it
   - it should also collide with other obstacles
@@ -90,7 +90,6 @@ if collision_layer == 0b1000:
 ```
 ##### pushing the _MovableObstacle_
 - to push the box, we need to reference the obstacle we collided with
-  - this should be the _MovableObstacle_ - we can do a [cast](https://en.wikipedia.org/wiki/Type_conversion) to ensure this
 ```
 ...
 if collision_layer == 0b1000:
