update session notes for April 7

--- a/2022_04_07_session.md
+++ b/2022_04_07_session.md
@@ -1,7 +1,89 @@
 ## Videogame Development Pt. 7
-- Creating a puzzle
 - Reaching an objective
+- Creating a puzzle
 - Displaying game information
+
+### Review our objective
+- we have to stick to what is not slime
+- but we also have to escape a maze
+  - by moving blocks that are not slime
+
+### Reaching the end of the maze
+- we need to make an end-game position
+- this can be placeable within the level
+  - ideally, poses a challenge for the player to reach
+- reaching this point should end the level
+
+#### Implementing the maze objective
+- Create a new scene with a root node 'Area2D'
+  - our idea is to create a space that the player enters
+  - when the space is entered, it triggers an event (level completion)
+  - rename the root _Objective_
+- Add a 'Sprite' node
+  - load a texture from the 'art' directory
+  - compare against the 'Sprite' child of other scenes
+- Add a child node 'CollisionShape2D'
+  - this will define the colllision boundary for the objective
+  - ensure that the boundary / shape matches your sprite texture
+- Set the layer + mask on the _Objective_
+  - in the Inspector tab on the root node
+  - set Layer 5 (new layer)
+  - mask layer _Castaway_ and _Movable_
+- Set the Z-index to '-1' on _Objective_
+  - so that the _Castaway_ appears above the _Objective_ sprite
+  - in the Inspector on the right-hand side
+  - under 'Node2D', change the 'Z Index' property
+- Save the new scene
+- Add a child instance of this scene in the level, _Planet\_0_
+
+#### Scripting the maze objective
+- Determine when the _Castaway_ collides with the _Objective_ boundary
+- Emit a signal
+- Respond to the signal in the _Planet\_0_ script
+  - end the game
+
+##### Emitting the signal
+- Create a new script for the _Objective_
+- Open the script and add a new signal
+  - called 'reached'
+- Select the root node from the Scene tree, and open the 'Node' tab
+  - on the right-hand side
+- From the list of available Signals (you should see also the one you've added)
+  - select 'body_entered' and double-click
+  - select 'Connect' at the bottom with the default options
+- This adds a new function to our script, which we'll modify
+
+```
+func _on_Objective_body_entered(body):
+	emit_signal("reached")
+	$CollisionShape2D.set_deferred("disabled", true) # don't interrupt physics
+```
+
+##### Receiving the signal
+- All we need to do now is respond to the signal
+  - we'll do this as we did for the 'hit' signal
+  - which means updating the _Castaway_ script
+- Select the _Planet\_0_ scene node
+  - find the _Objective_ in the scene tree (child instance of the root node)
+  - find the signal icon next to the scene label
+- From the 'Node' tab on the right-hand side, select the 'reached' signal
+  - under the 'Objective.gd' section (our _Objective_ script)
+  - double-click it and 'Connect' to _Planet\_0_
+- Another function was added to the _Planet\_0_ script
+  - where we'll implement the end of game behavior
+```
+func _on_Objective_reached():
+	$Castaway.disable()
+	# wait some time to display the 'complete' message
+	# display the 'complete' message
+```
+- Calling a function `disable` which doesn't yet exist on the _Castaway_
+  - we can create it on the scene script 'Castaway.gd'
+```
+func disable() -> void:
+	hide()
+	$CollisionShape2D.set_deferred("disabled", true)
+```
 
 ### Creating a puzzle
 - We're nearing a playable game
@@ -14,35 +96,128 @@
     - could _not_ reset moveable obstacle positions
     - could change player starting position after moving certain boxes
 
-### Review our objective
-- we have to stick to what is not slime
-- but we also have to escape a maze
-  - by moving blocks that are not slime
-
-### Reaching the end of the maze
-- we need to make an end-game position
-- this can be placeable within the level
-  - ideally, poses a challenge for the player to reach
-- reaching this point should reset the level
-- it should indicate that the level is completed
-
-#### Implementing the maze objective
-
-#### Scripting the maze objective
-
 ### Displaying information to the player
 - the player can now complete the game
 - we can now add some kind of indication that the game is over
-  - and an indication that the game has started
+  - and an indication when the game has started
   - separate from the typical reset on death
-  
+
 #### Implementing the splash screen (title + game end)
+- Create a new scene of node type 'CanvasLayer', rename it as 'Splash'
+  - This will serve as the basis for the title scene and the game end
+- To build up the screen, 'Label' nodes will be used for text display
+
+##### Displaying splash text
+- Add a 'Label' node as a child of the Splash
+- In the Inspector for this node, add to the 'Text' property
+  - start with the title screen, so add a name for the game
+- From the 2D viewport ribbon, you can select 'Use Grid Snap' to align the 'Label'
+- You can change the scale of the 'Label' in the Inspector
+  - note that the default font does not scale so well
+    - you can load a '.ttf' file (a font file)
+    - go to 'Theme Overrides > Fonts' and load your file
+- For the label node, ensure that the Text property 'Align' is set to 'Center'
+  - this way, changes to the text will center appropriately
+- Add a 'ColorRect' node, for a splash background
+  - move the node before the 'Label' node, so it appears behind the text
+  - adjust the color to contrast the text
+  - adjust the size to fill the background
+  - select the 'Layout' control from the viewport ribbon, click 'Full Rect'
+
+##### Timing the splash display
+- Add a 'Timer' node
+  - used to limit the display time of the splash
+  - In the Inspector, enable 'One Shot' and set 'Wait Time' to '2'
+- We'll use the same screen for game end
+  - but we'll need to script the text change for that purpose
+- Save the new scene
+
+#### Showing the splash at game start
+- Create a script for the 'Splash'
+- Add a signal
+```
+signal start_game
+```
+- Add a method to show the splash and begin a countdown
+```
+func display_and_countdown() -> void:
+	# reference the nodes as you named them
+	$ColorRect.show()
+	$Message.show()
+	$Timer.start()
+```
+- Connect the signal from the 'Timer' indicating that it's done
+  - we'll use this to hide the splash
+  - from the Scene tree on the left, find the 'Timer'
+  - click the signal symbol
+  - from the Node tab on the right, double-click `timeout()`
+  - connect it to the parent 'Splash' node
+    - this should add a function to the script
+```
+func _on_Timer_timeout() -> void:
+	$ColorRect.hide()
+	$Message.hide()
+```
+- Add methods for beginning, restarting, and ending the game with a splash
+```
+func start_game() -> void:
+	$Message.text = "Space Castaway"
+	display_and_countdown()
+	yield($Timer, "timeout")
+	emit_signal("game_start")
+
+func retry_game() -> void:
+	$Message.text = "Game Over"
+	display_and_countdown()
+	start_game()
+
+func end_game() -> void:
+	$Message.text = "You Escaped"
+	$ColorRect.show()
+	$Message.show()
+```
+
+##### 'Splashing'
+- With the functions we've developed, we can connect this scene to the level
+  - begin by creating a child instance of _Splash_ on the _Planet\_0_
+- Open the _Planet\_0_ script for editing
+- To start the game, update the `_ready` function to use our new methods
+```
+# Called when the node enters the scene tree for the first time.
+func _ready():
+	$Splash.start_game()
+```
+- Connect the 'game_start' signal 
+  - from the _Planet\_0_ scene tree, select the _Splash_
+  - in the node tab on the right, double click the `game_start()` signal
+  - connect it to the _Planet\_0_ root node and observe the `_on_Splash_game_start()`
+  - update the new function and other signal responses as follows
+```
+func _on_Castaway_hit():
+	# the player hit slime - allow them to retry
+	$Splash.retry_game()
+
+func _on_Objective_reached():
+	$Castaway.disable()
+	# use a quick timer and
+	# wait before splash and close the game
+	yield(get_tree().create_timer(2), "timeout")
+	# the game is completed
+	$Splash.end_game()
+
+func _on_Splash_game_start():
+    # the start game splash ended - initialize the play field
+	initialize()
+```
+- Save and test the changes
+- The game is completed!
 
 ### What other additions can you imagine?
 - lives count
 - multiple objectives
 - load another level on completion
 - timer for completing the level
+- sound effects
 
 ### Next time
 - bring in your level designs, new mechanics, game functions, other creations
