complete the game, synchronized with notes
added an objective, splash screens

--- a/2022_04_07_session.md
+++ b/2022_04_07_session.md
@@ -28,7 +28,7 @@
 - Set the layer + mask on the _Objective_
   - in the Inspector tab on the root node
   - set Layer 5 (new layer)
-  - mask layer _Castaway_ and _Movable_
+  - mask layer _Castaway_
 - Set the Z-index to '-1' on _Objective_
   - so that the _Castaway_ appears above the _Objective_ sprite
   - in the Inspector on the right-hand side
@@ -169,6 +169,8 @@ func start_game() -> void:
 func retry_game() -> void:
 	$Message.text = "Game Over"
 	display_and_countdown()
+	# add this yield so we hesitate before restarting the level
+	yield($Timer, "timeout")
 	start_game()
 
 func end_game() -> void:
